--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,13 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+
+<div>
+    <ul>
+        <li>
+            <a href="/">HOME</a>
+        </li>
+        <li>
+            <a href="/notes">NOTES</a>
+        </li>
+    </ul>
+</div>
