Add bulk delete
Added screen for note details.
Added creation time and last modification time.

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,6 +5,10 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    {{{body}}}
+  <a href="/">HOME</a>
+  <a href="/notes">NOTES</a>
+
+  {{{body}}}
+
   </body>
 </html>
