--- a/views/edit-note.hbs
+++ b/views/edit-note.hbs
@@ -4,8 +4,9 @@
             <label for="notetxt">{{ title }}</label>
         </p>
         <input type="hidden" name="noteId" value="{{ note.id }}">
-        <textarea id="notetxt" name="notetxt">{{ note.note }}</textarea>
+        <textarea id="notetxt" name="notetxt" style="width: 100%; height: 60vh;">{{ note.note }}</textarea>
         <div>
+            <a href="/notes/view/{{ note.id }}">CANCEL</a>
             <button type="submit">UPDATE</button>
         </div>
     </form>
