Add bootstrap material

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,4 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
-
-a {
-  color: #00B7FF;
+.nav.nav-pills.nav-stacked .divider {
+  height: 2px;
+  background-color: #CACACA;
 }
