--- a/views/layout-notes.hbs
+++ b/views/layout-notes.hbs
@@ -7,6 +7,7 @@
       <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.css" />
       <link rel="stylesheet" href="/node_modules/bootstrap-material-design/dist/css/bootstrap-material-design.css" />
       <link rel="stylesheet" href="/node_modules/bootstrap-material-design/dist/css/ripples.css" />
+      <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
   <body>
 
@@ -18,12 +19,12 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand active" href="/">[x]<div class="ripple-container"></div></a>
+              <a class="navbar-brand" href="/">[x]<div class="ripple-container"></div></a>
           </div>
           <div class="navbar-collapse collapse navbar-responsive-collapse">
               <ul class="nav navbar-nav">
                   <li><a href="/">HOME</a></li>
-                  <li><a href="/notes">Notes</a></li>
+                  <li class="active"><a href="/notes">Notes</a></li>
               </ul>
               <ul class="nav navbar-nav navbar-right">
                   <li class="dropdown">
@@ -43,10 +44,22 @@
   </div>
 
   <div class="container-fluid">
-      {{{body}}}
+      <div class="row">
+
+          <div class="col-sm-2">
+              <ul class="nav nav-pills nav-stacked">
+                  <li role="presentation"><a href="/notes">List of notes</a></li>
+                  <li role="presentation"><a href="/notes/create">Create note</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li role="presentation"><a href="/notes/tags/create">Tags</a></li>
+              </ul>
+          </div>
+
+          <div class="col-sm-10">
+              {{{body}}}
+          </div>
+      </div>
   </div>
-
-
 
   <script src="/node_modules/jquery/dist/jquery.js"></script>
   <script src="/node_modules/bootstrap/dist/js/bootstrap.js"></script>
