--- a/views/notes.hbs
+++ b/views/notes.hbs
@@ -22,7 +22,7 @@
                     <div class="panel-body">
                         {{ this.note }}
                     </div>
-                    <div class="panel-footer text-right">
+                    <div class="panel-footer">
                         <a class="btn btn-info" href="/notes/view/{{ this.id }}">View Details</a>
                     </div>
                 </div>
