--- a/views/view-note.hbs
+++ b/views/view-note.hbs
@@ -1,12 +1,27 @@
-<div>
-    <form action="/notes/edit" method="POST">
-        <small>Id: {{ note.id }}</small>
-        <p>Created: {{ note.creationTime }}</p>
-        <p>Last modification: {{ note.lastModification }}</p>
-        <div>
-            <input type="hidden" name="noteId" value="{{ note.id }}">
-            <button type="submit">EDIT</button>
-        </div>
-        <p>{{ note.note }}</p>
-    </form>
+<div class="row">
+    <div class="col-xs-12">
+        <form action="/notes/edit" method="POST">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <div class="row">
+                        <div class="col-md-10">
+                            {{ note.title }}
+                        </div>
+                        <div class="col-md-2">
+                            <div>
+                                <label>Changed: </label> {{ note.lastModification }}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel-body">
+                    {{ note.note }}
+                </div>
+                <div class="panel-footer">
+                    <input type="hidden" name="noteId" value="{{ note.id }}">
+                    <button class="btn btn-primary">EDIT</button>
+                </div>
+            </div>
+        </form>
+    </div>
 </div>
