--- a/views/edit-note.hbs
+++ b/views/edit-note.hbs
@@ -8,7 +8,7 @@
     {{/if}}
         <div class="form-group">
             <label for="noteTitle">Title</label>
-            <input type="text" id="noteTitle" maxlength="255" class="form-control" value="{{ note.title }}">
+            <input type="text" id="noteTitle" name="noteTitle" maxlength="255" class="form-control" value="{{ note.title }}">
         </div>
         <div class="form-group">
             <label for="notetxt">Note</label>
