--- a/views/layout-notes.hbs
+++ b/views/layout-notes.hbs
@@ -48,7 +48,7 @@
 
           <div class="col-sm-2">
               <ul class="nav nav-pills nav-stacked">
-                  <li role="presentation"><a href="/notes">List of notes</a></li>
+                  <li role="presentation"><a href="/notes">List of notes <span class="badge pull-right">{{ numNotes }}</span></a></li>
                   <li role="presentation"><a href="/notes/create">Create note</a></li>
                   <li role="separator" class="divider"></li>
                   <li role="presentation"><a href="/notes/tags/create">Tags</a></li>
