--- a/views/view-note.hbs
+++ b/views/view-note.hbs
@@ -19,7 +19,9 @@
                 </div>
                 <div class="panel-footer">
                     <input type="hidden" name="noteId" value="{{ note.id }}">
-                    <button class="btn btn-primary">EDIT</button>
+                    <a class="btn btn-default" href="/notes">CANCEL</a>
+                    <button class="btn btn-primary" name="editBtn" value="1">EDIT</button>
+                    <button class="btn btn-danger" name="deleteBtn" value="1">DELETE</button>
                 </div>
             </div>
         </form>
